선택 및 다중선택 통합

--- a/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap.vcxproj
@@ -149,14 +149,17 @@
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="MouseAction.cpp" />
     <ClCompile Include="MouseStrategy.cpp" />
+    <ClCompile Include="MultiSelect.cpp" />
     <ClCompile Include="Page.cpp" />
     <ClCompile Include="PageApp.cpp" />
     <ClCompile Include="PageForm.cpp" />
+    <ClCompile Include="Select.cpp" />
     <ClCompile Include="Selection.cpp" />
     <ClCompile Include="SelectionMarkVIsitor.cpp" />
     <ClCompile Include="SelectionStrategy.cpp" />
     <ClCompile Include="Shape.cpp" />
     <ClCompile Include="ShapeVisitor.cpp" />
+    <ClCompile Include="SingleSelect.cpp" />
     <ClCompile Include="Topic.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -171,14 +174,17 @@
     <ClInclude Include="Line.h" />
     <ClInclude Include="MouseAction.h" />
     <ClInclude Include="MouseStrategy.h" />
+    <ClInclude Include="MultiSelect.h" />
     <ClInclude Include="Page.h" />
     <ClInclude Include="PageApp.h" />
     <ClInclude Include="PageForm.h" />
+    <ClInclude Include="Select.h" />
     <ClInclude Include="Selection.h" />
     <ClInclude Include="SelectionMarkVisitor.h" />
     <ClInclude Include="SelectionStrategy.h" />
     <ClInclude Include="Shape.h" />
     <ClInclude Include="ShapeVisitor.h" />
+    <ClInclude Include="SingleSelect.h" />
     <ClInclude Include="Topic.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
