--- a/Mindmap/Mindmap.vcxproj.filters
+++ b/Mindmap/Mindmap.vcxproj.filters
@@ -123,6 +123,9 @@
     <ClCompile Include="WriteVisitor.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="DoubleClickSelectText.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MouseAction.h">
@@ -237,6 +240,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="WriteVisitor.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="DoubleClickSelectText.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
