--- a/Mindmap/Mindmap.vcxproj.filters
+++ b/Mindmap/Mindmap.vcxproj.filters
@@ -78,6 +78,9 @@
     <ClCompile Include="SingleSelect.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="LineIterator.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="MouseAction.h">
@@ -147,6 +150,9 @@
       <Filter>헤더 파일</Filter>
     </ClInclude>
     <ClInclude Include="SingleSelect.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="LineIterator.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
   </ItemGroup>
