--- a/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap.vcxproj
@@ -145,9 +145,12 @@
     <ClCompile Include="Composite.cpp" />
     <ClCompile Include="DrawingStrategy.cpp" />
     <ClCompile Include="DrawingVisitor.cpp" />
+    <ClCompile Include="DrawLines.cpp" />
     <ClCompile Include="HitTestVisitor.cpp" />
+    <ClCompile Include="Iterator.cpp" />
     <ClCompile Include="Line.cpp" />
-    <ClCompile Include="LineIterator.cpp" />
+    <ClCompile Include="BranchTraverser.cpp" />
+    <ClCompile Include="BranchIterator.cpp" />
     <ClCompile Include="MouseAction.cpp" />
     <ClCompile Include="MouseStrategy.cpp" />
     <ClCompile Include="MultiSelect.cpp" />
@@ -170,10 +173,12 @@
     <ClInclude Include="Composite.h" />
     <ClInclude Include="DrawingStrategy.h" />
     <ClInclude Include="DrawingVisitor.h" />
+    <ClInclude Include="DrawLines.h" />
     <ClInclude Include="HitTestVisitor.h" />
     <ClInclude Include="Iterator.h" />
     <ClInclude Include="Line.h" />
-    <ClInclude Include="LineIterator.h" />
+    <ClInclude Include="BranchTraverser.h" />
+    <ClInclude Include="BranchIterator.h" />
     <ClInclude Include="MouseAction.h" />
     <ClInclude Include="MouseStrategy.h" />
     <ClInclude Include="MultiSelect.h" />
