--- a/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap.vcxproj
@@ -44,7 +44,8 @@
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
     <PlatformToolset>v141</PlatformToolset>
-    <CharacterSet>Unicode</CharacterSet>
+    <CharacterSet>NotSet</CharacterSet>
+    <UseOfMfc>Dynamic</UseOfMfc>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
@@ -151,6 +152,8 @@
     <ClCompile Include="Line.cpp" />
     <ClCompile Include="BranchTraverser.cpp" />
     <ClCompile Include="BranchIterator.cpp" />
+    <ClCompile Include="Mark.cpp" />
+    <ClCompile Include="MarkStrategy.cpp" />
     <ClCompile Include="MouseAction.cpp" />
     <ClCompile Include="MouseStrategy.cpp" />
     <ClCompile Include="MultiSelect.cpp" />
@@ -179,6 +182,8 @@
     <ClInclude Include="Line.h" />
     <ClInclude Include="BranchTraverser.h" />
     <ClInclude Include="BranchIterator.h" />
+    <ClInclude Include="Mark.h" />
+    <ClInclude Include="MarkStrategy.h" />
     <ClInclude Include="MouseAction.h" />
     <ClInclude Include="MouseStrategy.h" />
     <ClInclude Include="MultiSelect.h" />
