--- a/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap.vcxproj
@@ -147,6 +147,7 @@
     <ClCompile Include="DrawingStrategy.cpp" />
     <ClCompile Include="DrawLines.cpp" />
     <ClCompile Include="DrawTopics.cpp" />
+    <ClCompile Include="FoldVisitor.cpp" />
     <ClCompile Include="HitTestVisitor.cpp" />
     <ClCompile Include="Iterator.cpp" />
     <ClCompile Include="Line.cpp" />
@@ -168,6 +169,7 @@
     <ClCompile Include="ShapeVisitor.cpp" />
     <ClCompile Include="SingleSelect.cpp" />
     <ClCompile Include="Topic.cpp" />
+    <ClCompile Include="UnFoldVisitor.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h" />
@@ -177,6 +179,7 @@
     <ClInclude Include="DrawingStrategy.h" />
     <ClInclude Include="DrawLines.h" />
     <ClInclude Include="DrawTopics.h" />
+    <ClInclude Include="FoldVisitor.h" />
     <ClInclude Include="HitTestVisitor.h" />
     <ClInclude Include="Iterator.h" />
     <ClInclude Include="Line.h" />
@@ -198,6 +201,7 @@
     <ClInclude Include="ShapeVisitor.h" />
     <ClInclude Include="SingleSelect.h" />
     <ClInclude Include="Topic.h" />
+    <ClInclude Include="UnFoldVisitor.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
