한글클래스 추가전
관영이형작업물 받을려고

--- a/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap.vcxproj
@@ -107,6 +107,7 @@
     <ClInclude Include="TextFormSize.h" />
     <ClInclude Include="TextVisitor.h" />
     <ClInclude Include="Topic.h" />
+    <ClInclude Include="WriteKorean.h" />
     <ClInclude Include="WriteVisitor.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
