--- a/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="DrawLines.cpp" />
     <ClCompile Include="DrawTopics.cpp" />
     <ClCompile Include="FoldVisitor.cpp" />
+    <ClCompile Include="HitTester.cpp" />
     <ClCompile Include="HitTestVisitor.cpp" />
     <ClCompile Include="Iterator.cpp" />
     <ClCompile Include="Line.cpp" />
@@ -184,6 +185,7 @@
     <ClInclude Include="DrawLines.h" />
     <ClInclude Include="DrawTopics.h" />
     <ClInclude Include="FoldVisitor.h" />
+    <ClInclude Include="HitTester.h" />
     <ClInclude Include="HitTestVisitor.h" />
     <ClInclude Include="Iterator.h" />
     <ClInclude Include="Line.h" />
