--- a/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap.vcxproj
@@ -147,8 +147,10 @@
     <ClCompile Include="DrawingStrategy.cpp" />
     <ClCompile Include="DrawingVisitor.cpp" />
     <ClCompile Include="DrawLines.cpp" />
+    <ClCompile Include="DrawMarks.cpp" />
     <ClCompile Include="DrawTopics.cpp" />
     <ClCompile Include="FoldVisitor.cpp" />
+    <ClCompile Include="HitTester.cpp" />
     <ClCompile Include="HitTestVisitor.cpp" />
     <ClCompile Include="Iterator.cpp" />
     <ClCompile Include="Line.cpp" />
@@ -182,8 +184,10 @@
     <ClInclude Include="DrawingStrategy.h" />
     <ClInclude Include="DrawingVisitor.h" />
     <ClInclude Include="DrawLines.h" />
+    <ClInclude Include="DrawMarks.h" />
     <ClInclude Include="DrawTopics.h" />
     <ClInclude Include="FoldVisitor.h" />
+    <ClInclude Include="HitTester.h" />
     <ClInclude Include="HitTestVisitor.h" />
     <ClInclude Include="Iterator.h" />
     <ClInclude Include="Line.h" />
