--- a/Mindmap/Mindmap.vcxproj.filters
+++ b/Mindmap/Mindmap.vcxproj.filters
@@ -120,6 +120,9 @@
     <ClInclude Include="HitTester.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="SubBranchDeselect.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Branch.cpp">
@@ -222,6 +225,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="UnFoldVisitor.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="SubBranchDeselect.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
