폰트 클래스 추가
병합

--- a/Mindmap/Mindmap.vcxproj.filters
+++ b/Mindmap/Mindmap.vcxproj.filters
@@ -159,6 +159,9 @@
     <ClInclude Include="WriteEnglish.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="TextFont.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Branch.cpp">
@@ -297,6 +300,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="WriteEnglish.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="TextFont.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
