--- a/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap.vcxproj
@@ -60,6 +60,7 @@
     <ClInclude Include="TextDoubleClick.h" />
     <ClInclude Include="TextDoubleClickSelectAction.h" />
     <ClInclude Include="TextDrag.h" />
+    <ClInclude Include="TextFont.h" />
     <ClInclude Include="TextForm.h" />
     <ClInclude Include="TextFormSize.h" />
     <ClInclude Include="TextVisitor.h" />
@@ -108,6 +109,7 @@
     <ClCompile Include="TextDoubleClick.cpp" />
     <ClCompile Include="TextDoubleClickSelectAction.cpp" />
     <ClCompile Include="TextDrag.cpp" />
+    <ClCompile Include="TextFont.cpp" />
     <ClCompile Include="TextForm.cpp" />
     <ClCompile Include="TextFormSize.cpp" />
     <ClCompile Include="TextVisitor.cpp" />
